@@ -122,6 +122,8 @@ Eduardo Lima (Etrunko) <eblima@gmail.com>
 Leandro Dorileo (dorileo) <dorileo@profusion.mobi>
 Patryk Kaczmarek <patryk.k@samsung.com>
 Zbigniew Kosinski <z.kosinski@samsung.com>
+Paulo C. A. Cavalcanti Jr <paulo.cavalcanti@intel.com>
+
 
 Ecore
 -----
